
3/16/24-3/21/24:

1. Updated search algorithm to be better

2. Updated target publisher to take from a text file and give every target the same time period. Time period can be changed 

3. Made a GUI that will run the different part of our system so it is user friendly

4. Trying to see how NLP would work and how to put that in 

3/21/24-3/24/24:

1. Testing yields nav2_params.yaml MPPI controller needs to be tuned to not exceed behavior tree tick rate and controller frequency

2. targets.txt needs to be reset at ever gui start so old targets do not get taken in by publisher

3/25/24-3/26/24:

1. Reduced controller frequency to 5 Hz and model_dt to 0.25. Control does not miss its loop duration anymore

2. Disabling RViz does not tick behavior tree over 100 Hz. Any enablement of RViz causes ticking to go too fast

3. LiDAR filter is working correctly. Robot navigates with top platform rods in place

4. NUC might be too weak to support all the processing we are doing. Target Tracking servos are moving too slow. Need to run NUC in performance mode in BIOS and check if that solves problem. 

3/27/24:

1. Testing on NUC reveals removing RViz and Camera feed makes tracking faster and does not tick behavior tree faster than 100 Hz. Both work well

2. Added clear targets button to GUI, and added functionality to target pub to make it work with clearing of targets

3. More chassis upgrades machining

4. Updating search algorithm. Giving more tries for initial last known location search and more time before new search is published

5. Removed nav2 server verbosity 

3/28/24:

1. Put top platform on and got everything working with it

2. Updated pico code on repo side

3/30/24:

1. Fixed SLAM issue that was there from yesterday

2. Got new camera and USB hub, so put those in

3. Added assisted teleop functionality to robot during navigation. Still, the issue of everything being reset when it hits an obstacle needs to figured out and solved. Maybe rubber bumpers?